# testcontainers-cloud-rs-example

./: Cargo.toml  README.md
.github/workflows/: ci.yml
tests/: cloud_first_test.rs  initdb.sql
tests/pretty_strings/: tc-desktop-not-found.txt  tcc-congratulations.tmpl
